# adventofcode2025

./: .gitignore  .pre-commit-config.yaml  README.md  p1.py  pyproject.toml
day01/: solution.py
day02/: solution.py
day03/: solution.py
day04/: solution.py
day05/: solution.py
day06/: solution.py
day07/: solution.py
day08/: solution.py
day09/: solution.py
day1/: solution.py
