[project]
name = "adventofcode2025"
version = "0.1.0"
description = "Advent of Code 2025 Solutions"
requires-python = ">=3.8"
dependencies = [
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py38"]
